# agentic-template

./: .env.example  app.py  chat_single_task.py  example.py  pyproject.toml  setup_app.py  setup_chat.py  setup_duckduckgo.py  setup_env.py  setup_langchain.py  setup_langgraph.py  setup_langgraph_2.py  setup_openai.py  setup_pinecone.py  setup_prompt.py  setup_weatherapi.py  streamlit_app.py
app/: main.py
app/agents/: web_search_agent.py
app/chains/: web_search_chain.py
app/components/: chat_ui.py  page_ui.py
app/config/: envs.py
app/llms/: openai.py
app/pages/: chat.py  page_1.py
app/tools/: vecterstore.py  weather.py  web_search.py
chains/: web_search.py  web_search_chain.py
components/: chat_ui.py
config/: envs.py
llms/: anthropic.py  groq.py  openai.py
pages/: chat.py
prompts/: single_task.py
tests/: test_weather.py  test_web_search.py
