[project]
name = "streamlit-chat-template"
version = "0.1.0"
description = "Agentic RAG chatbot template built with Streamlit. MIT License."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12,<4.0"
authors = [
    { name = "Keming He", email = "keminghe.career@gmail.com" }
]
keywords = ["agentic", "rag", "chatbot", "streamlit", "template"]
classifiers = [
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "streamlit (>=1.42.0,<2.0.0)"
]

[project.urls]
homepage = "https://agentic-chat-template.streamlit.app"
repository = "https://github.com/KemingHe/streamlit-chat-template"
documentation = "https://github.com/KemingHe/streamlit-chat-template/blob/main/README.md"
"Bug Tracker" = "https://github.com/KemingHe/streamlit-chat-template/issues"

[project.scripts]
start = "streamlit run app/homepage.py"

[tool.poetry]
package-mode = false
requires-poetry = ">2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
